--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <div class="btn-wrap">
-      <p class="current-color">Текущий цвет фона</p>
+      <p class="current-color">Для старта нажми "Start"</p>
       <button type="button" data-action="start" class="btn">Start</button>
       <button type="button" data-action="stop" class="btn">Stop</button>
     </div>
